--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,24 @@ name = "solana-client-test"
 version = "0.1.0"
 edition = "2021"
 
+
+[[bin]]
+name = "mint"
+path = "src/bin/mint.rs"
+
+[[bin]]
+name = "event_listener"
+path = "src/bin/event_listener.rs"
+
+[[bin]]
+name = "burn"
+path = "src/bin/burn.rs"
+
 [dependencies]
 anchor-client = { version = "0.30.1 ", features = ["async"] }
 bitvm-bridge-contracts-solana = { git = "https://github.com/fiamma-chain/bitvm-bridge-contracts-solana.git", branch = "main" }
 anchor-spl = { version = "0.30.1", features = ["metadata"] }
 tokio = { version = "1.41.1", features = ["macros"] }
+solana-transaction-status = "1.18.26"
+base64 = "0.22.1"
+dotenv = "0.15.0"
